--- a/Front-End/pages/assets/css/style.css
+++ b/Front-End/pages/assets/css/style.css
@@ -28,6 +28,7 @@ nav .btn {
     background-color: #010D26;
 }
 
+/* Banner */
 #banner{
     margin-top: 35px;
     background-image: url("../images/img banner.jpg");
@@ -46,5 +47,54 @@ nav .btn {
 }
 
 
+/* Card de imagens */
+.grid-1 {
+    margin-top: 60px;
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    
+    grid-gap: 30px;
+    border-color: #000000;
+    
+  }
+  .grid-1 div{
+    width: 240px;
+    height: 260px;
+    border-radius: 12px;
+  }
 
+  .col1, .col2, .col3,.col4{
+    background-size: cover;  
+}
 
+.col1{background-image: url("https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80")}
+
+.col2{background-image: url("https://images.unsplash.com/photo-1575517111478-7f6afd0973db?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60")}
+
+.col3{background-image: url("https://images.unsplash.com/photo-1513584684374-8bab748fbf90?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60")}
+
+.col4{background-image:  url("https://images.unsplash.com/photo-1503174971373-b1f69850bded?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzV8fGhvdXNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60")}
+
+/*Nossa Proposta*/
+.teste{
+    margin-top: 120px;
+   
+}
+
+#teste1{
+    background-color: blue;
+    margin: 0 auto;
+    
+    
+}
+#teste2{
+    background-color: yellow;
+    margin: 0 auto;
+    
+    
+}
+.teste #teste1, #teste2 {
+    padding: 30px;
+}
