--- a/Front-End/pages/assets/css/style.css
+++ b/Front-End/pages/assets/css/style.css
@@ -1,49 +1,52 @@
 /* Navbar*/
-nav {
-    height: 105px;
-    line-height: 105px; 
+.navbar-custom{
+  height: 140px;
+  margin: 0 auto;
+ 
 }
 
-nav ul a{
-    color: #000000;
-    font-size: 18px;
-    font-weight: bold;
-    margin-left: 15px;  
-}
 
-.nav-wrapper img{
-  width: 310px;
-  height: 85px;
+
+#nav-container{
+ margin: 0 auto;
+
+}
+#nav-container a:hover{
+ color: #010D26;
 
 }
 
-nav .btn {
-    color: #fff;
-    background-color: #143373;
-    border-radius: 12px;
+#nav-layout{
+  margin-right:20px;
+  font-size: 21px;
+  font-weight: bold;
 }
 
-.btn:hover{
-    opacity: 1;
-    background-color: #010D26;
+#nav-layout li{
+  margin-right:20px;
 }
+
+
 
 /* Banner */
 #banner{
-    margin-top: 35px;
+    margin-top: 25px;
     background-image: url("../images/img banner.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: center;
     height: 450px;
 }
 
-#banner p,h2{
+#banner h2 {
+    margin-top: 35px;
     font-weight: bold;
 }
 
 #banner p{
+    margin-top: 10px;
     font-size: 16px;
+    font-weight: bold;
 }
 
 
@@ -98,3 +101,95 @@ nav .btn {
 .teste #teste1, #teste2 {
     padding: 30px;
 }
+
+/*Footer*/
+.footer-dark {
+    padding:50px 0;
+    color:#f0f9ff;
+    background-color:#010D26;
+  }
+  
+  .footer-dark h3 {
+    margin-top:0;
+    margin-bottom:12px;
+    font-weight:bold;
+    font-size:16px;
+  }
+  
+  .footer-dark ul {
+    padding:0;
+    list-style:none;
+    line-height:1.6;
+    font-size:14px;
+    margin-bottom:0;
+  }
+  
+  .footer-dark ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.6;
+  }
+  
+  .footer-dark ul a:hover {
+    opacity:0.8;
+  }
+  
+  @media (max-width:767px) {
+    .footer-dark .item:not(.social) {
+      text-align:center;
+      padding-bottom:20px;
+    }
+  }
+  
+  .footer-dark .item.text {
+    margin-bottom:36px;
+  }
+  
+  @media (max-width:767px) {
+    .footer-dark .item.text {
+      margin-bottom:0;
+    }
+  }
+  
+  .footer-dark .item.text p {
+    opacity:0.6;
+    margin-bottom:0;
+  }
+  
+  .footer-dark .item.social {
+    text-align:center;
+  }
+  
+  @media (max-width:991px) {
+    .footer-dark .item.social {
+      text-align:center;
+      margin-top:20px;
+    }
+  }
+  
+  .footer-dark .item.social > a {
+    font-size:20px;
+    width:36px;
+    height:36px;
+    line-height:36px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+    margin:0 8px;
+    color:#fff;
+    opacity:0.75;
+  }
+  
+  .footer-dark .item.social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-dark .copyright {
+    text-align:center;
+    padding-top:24px;
+    opacity:0.3;
+    font-size:13px;
+    margin-bottom:0;
+  }
+  
