--- a/Front-End/pages/assets/css/style.css
+++ b/Front-End/pages/assets/css/style.css
@@ -192,11 +192,17 @@ card {
     height: 835px;
     margin: auto;
     padding: 50px 70px;
+    margin-top: 200px;
     box-sizing: border-box;
     border: 10px solid #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.6);
     border-radius: 10px;
+    overflow: hidden;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 0 0 20px 8px #d0d0d0;
 }
+
 
 .registration-form .form-icon {
     text-align: center;
@@ -224,6 +230,17 @@ card {
     line-height: 45px;
     text-align: center;
     color: #ffffff;
+}
+#registration-form h1 {
+    position: absolute;
+    width: 187px;
+    height: 38.8px;
+    
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 44px;
 }
 
 .registration-form .create-account {
@@ -289,3 +306,38 @@ card {
     height: 400px;
     width: 400px;
 } */
+.registration-form map {
+    width: 50px;
+    height: 200px;
+    background-color: grey;
+
+}
+.card-form form{
+    position: absolute;
+    width: 350px;
+    height: 418.58px;
+    background: #FFFFFF;
+    margin: auto;
+    margin-top: 200px;
+    padding: 50px 70px;
+    box-sizing: border-box;
+    border: 10px solid #FFFFFF;
+    overflow: hidden;
+    border-radius: 20px;
+    cursor: pointer;
+    box-shadow: 0 0 20px 8px #d0d0d0;
+}
+.card-form h3{
+    position: absolute;
+    width: 276px;
+    height: 138.33px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+
+}
+
+
