--- a/Front-End/pages/assets/css/style.css
+++ b/Front-End/pages/assets/css/style.css
@@ -37,6 +37,31 @@ nav .btn {
     background-position: center center;
     height: 450px;
 }
+#fundoForm {
+    margin-top: 200px;
+    background-image: url("../images/img fundoazul.jpg");
+    background-image: url("../images/img FundoForm.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 1000px;
+}
+#fundoAzul {
+    /* margin-top: 35px; */
+    background-image: url("../images/img fundoazul.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 800.9px;
+}
+/* #fundoazul {
+    margin-top: 35px;
+    background-image: url("../images/img fundoazul.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 450px;
+} */
 
 #banner p,
 h2 {
@@ -99,7 +124,7 @@ h2 {
   
 } */
 
-#teste1 {
+/* #teste1 {
     background-color: blue;
     margin: 0 auto;
 
@@ -116,7 +141,7 @@ h2 {
 .teste #teste1,
 #teste2 {
     padding: 30px;
-}
+} */
 
 .card-body {
     position: relative;
@@ -153,7 +178,7 @@ form .btn {
     color: #020202;
 }
 
-.registration-form p {
+/* .registration-form b {
     height: 64.33px;
     font-family: 'IBM Plex Sans';
     font-style: normal;
@@ -161,7 +186,7 @@ form .btn {
     font-size: 16px;
     text-align: center;
     color: #434346;
-}
+} */
 
 card {
     box-sizing: border-box;
@@ -187,6 +212,7 @@ card {
 }
 
 .registration-form form {
+    position: center;
     background-color: white;
     width: 492px;
     height: 835px;
@@ -200,7 +226,7 @@ card {
     overflow: hidden;
     border-radius: 20px;
     cursor: pointer;
-    box-shadow: 0 0 20px 8px #d0d0d0;
+    /* box-shadow: 0 0 20px 8px #d0d0d0; */
 }
 
 
@@ -301,11 +327,6 @@ card {
         line-height: 70px;
     }
 }
-
-/* #mapa {
-    height: 400px;
-    width: 400px;
-} */
 .registration-form map {
     width: 50px;
     height: 200px;
@@ -313,7 +334,10 @@ card {
 
 }
 .card-form form{
-    position: absolute;
+    background-image: url("../images/img banner.jpg");
+    justify-content: center;
+    justify-items: center;
+    position: center;
     width: 350px;
     height: 418.58px;
     background: #FFFFFF;
@@ -325,19 +349,216 @@ card {
     overflow: hidden;
     border-radius: 20px;
     cursor: pointer;
-    box-shadow: 0 0 20px 8px #d0d0d0;
+    /* box-shadow: 0 0 20px 8px #d0d0d0; */
 }
-.card-form h3{
-    position: absolute;
-    width: 276px;
-    height: 138.33px;
+/* .card-form h3{
     font-family: 'Inter';
-    font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 22px;
-    color: #000000;
+    line-height: 45px;
+    text-align: center;
+    color: black;
+} */
+.card-form img {
+    position: absolute;
+    /* width: 68px;
+    height: 68px; */
+    width: 60px;
+    height: 60px;
+}
+.card-form h1{
+position: center;
+font-size: 20px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+text-transform: capitalize;
 
+
+font-size: 36px;
+line-height: 44px;
+}
+.card-form p{
+    margin-top: 13%;
+    font-family: 'Inter';
+    font-weight: 400;
+    font-size: 18px;
+    text-transform: capitalize;
+    line-height: 45px;
+    text-align: center;
+    color: black;
+}
+/*Footer*/
+.footer-dark {
+    padding:50px 0;
+    color:#f0f9ff;
+    background-color:#010D26;
+  }
+  
+  .footer-dark h3 {
+    margin-top:0;
+    margin-bottom:12px;
+    font-weight:bold;
+    font-size:16px;
+  }
+  
+  .footer-dark ul {
+    padding:0;
+    list-style:none;
+    line-height:1.6;
+    font-size:14px;
+    margin-bottom:0;
+  }
+  
+  .footer-dark ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.6;
+  }
+  
+  .footer-dark ul a:hover {
+    opacity:0.8;
+  }
+  
+  @media (max-width:767px) {
+    .footer-dark .item:not(.social) {
+      text-align:center;
+      padding-bottom:20px;
+    }
+  }
+  
+  .footer-dark .item.text {
+    margin-bottom:36px;
+  }
+  
+  @media (max-width:767px) {
+    .footer-dark .item.text {
+      margin-bottom:0;
+    }
+  }
+  
+  .footer-dark .item.text p {
+    opacity:0.6;
+    margin-bottom:0;
+  }
+  
+  .footer-dark .item.social {
+    text-align:center;
+  }
+  
+  @media (max-width:991px) {
+    .footer-dark .item.social {
+      text-align:center;
+      margin-top:20px;
+    }
+  }
+  
+  .footer-dark .item.social > a {
+    font-size:20px;
+    width:36px;
+    height:36px;
+    line-height:36px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+    margin:0 8px;
+    color:#fff;
+    opacity:0.75;
+  }
+  
+  .footer-dark .item.social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-dark .copyright {
+    text-align:center;
+    padding-top:24px;
+    opacity:0.3;
+    font-size:13px;
+    margin-bottom:0;
+  }
+
+
+  /* Slides */
+
+.slideshow-container img {
+    vertical-align: middle;
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+}
+
+.slideshow-container {
+    margin: 0px 0px 0px 0px;
+}
+
+.dotcentro {
+    text-align: center;
+    transform: translate(755px, 0px);
+    -ms-transform: translate(-50%, -50%);
+    position: absolute;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: rgb(13, 11, 11);
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    transform: translate(-50%, -155%);
+}
+
+.active,
+.dot:hover {
+    background-color: white;
+}
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
 
 
+/* efeito */
+
+/* @-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+} */
+.social-link {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #666;
+    border-radius: 50%;
+    transition: all 0.3s;
+    font-size: 0.9rem;
+}
+
+.social-link:hover, .social-link:focus {
+    background: #ddd;
+    text-decoration: none;
+    color: #555;
+}
