--- a/Front-End/pages/assets/css/style.css
+++ b/Front-End/pages/assets/css/style.css
@@ -16,6 +16,7 @@
   
   #nav-container{
    margin: 0 auto;
+   width: 100vw;
   
   }
   #nav-container a:hover{
@@ -52,6 +53,9 @@
     background-size: cover;
     background-position: center center;
     height: 1000px;
+    padding: 0!important;
+    margin: 0!important;
+    width: 100%!important;
 }
 #fundoAzul {
     /* margin-top: 35px; */
@@ -60,7 +64,9 @@
     background-size: cover;
     background-position: center center;
     height: 800.9px;
-    width: 100vw
+    width: 100vw!important;
+    padding: 0!important;
+    margin: 0!important;
     
 }
 /* #fundoazul {
@@ -91,7 +97,6 @@ h2 {
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     grid-gap: 30px;
     border-color: #000000;
-
 }
 
 .grid-1 div {
@@ -224,6 +229,7 @@ card {
 
 .registration-form {
     padding: 50px 0;
+    width: 100%;
 }
 
 .registration-form form {
@@ -658,42 +664,37 @@ line-height: 44px;
 /* Nossa Proposta */
 .proposta{
     margin-top: 80px;
-    
 }
 #prop1{
     background-color: #123C73;
     padding: 220px;
+    width: 100vw;
 }
 #prop2{
+    background-repeat: no-repeat;
+    background-size: cover;
     background-image: url(../images/casa.png);
     padding: 220px;
+    width: 100vw;
 }
-#container-prop{
+
+
+#card-prop{
     position: absolute;
-    background-color: none;
-    left: 18%;
-    margin-top: 120px;
-    
-    
-
-}
-
-#card-prop {
-    margin-top: 10px;
-    margin-bottom: 10px;
-
+    bottom: -400px;
+    left: calc(50% - (1320px/2));
 }
 
 #card-prop div{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 30px;
+    margin: 50px;
     justify-content: center;
     justify-items: center;
     color: #010D26;
     height: 150px;
-    width: 25%;
+    max-width: 400px;
     background-color: #fff;
     border-radius: 12px;
     text-align: center;
